--- a/src/Paginator.Async/Paginator.Async.csproj
+++ b/src/Paginator.Async/Paginator.Async.csproj
@@ -1,6 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>Paginator.NET.Async</PackageId>
+    <Product>Paginator.NET</Product>
+    <Description>A lightweight library written in C# .NET Standard, that automatically handles paginating collections of objects in .NET code.</Description>
+    <Copyright>Copyright © Craig Bridges 2021</Copyright>
+    <Authors>Craig Bridges</Authors>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <Version>1.0.0</Version>
+    <LicenseUrl>https://github.com/craigbridges/Paginator.NET/blob/main/LICENSE</LicenseUrl>
+    <RepositoryUrl>https://github.com/craigbridges/Paginator.NET</RepositoryUrl>
+    <RequireLicenseAcceptance>false</RequireLicenseAcceptance>
+    <PackageReleaseNotes></PackageReleaseNotes>
+    <Tags>Craig Bridges Paginator Pagination .NET async dotnet netstandard netcore C#</Tags>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="System.Interactive.Async" Version="5.0.0" />
